<resources>
    <string name="app_name">BabyApp</string>
    <string name="minute">min</string>
    <string name="routes">Routes</string>
    <string name="settings">Settings</string>
    <string name="update_route">Update Route</string>
    <string name="cancel">Cancel</string>
    <string name="route_name">Route Name</string>
    <string name="set_icon">Set Icon</string>
    <string name="add_child">Add Child</string>
    <string name="set_your_alarm_time">Set your alarm time</string>
    <string name="quick_times">Quick times</string>
    <string name="manual">Manual</string>
    <string name="start">Start</string>
    <string name="child">Child</string>
    <string name="update">Update</string>
    <string name="add_photo">Add photo</string>
    <string name="child_name">Child name</string>
    <string name="time_remaining">Time remaining</string>
    <string name="active_route_work">Active Route: Work</string>
    <string name="count_time">00 : 01 : 00</string>
    <string name="hr_min_sec">Hr   Min   Sec</string>
    <string name="five_min_plus">+ 5 min</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="active_route">Active route: </string>
    <string name="stop_count_down">Stop Count Down</string>
    <string name="select_icon">Select Icon</string>
    <string name="volume">Volume</string>
    <string name="record_your_own_audio_alarm">Record your own audio alarm</string>
    <string name="record_your_own_video_alarm">Record your own video alarm</string>
    <string name="alarm_selection">Alarm Selection</string>
    <string name="passenger_manager">Passenger Manager</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_that_you_want_to_delete_this_passenger">Are you sure that you want to delete this passenger ?</string>
    <string name="pick_image_intent_text">Pick your photo</string>
</resources>
