<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_background"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_delete" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivDelete"
        android:fontFamily="@font/font_uvn_baisau"
        android:gravity="center"
        android:text="@string/are_you_sure_that_you_want_to_delete_this_passenger"
        android:textColor="#FD0505"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutLineDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWarning"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_shadow_curve"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shadow_curve"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />


    </LinearLayout>


</RelativeLayout>