<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3A60D"
    tools:context=".CountDownTimeActivity">


    <TextView
        android:id="@+id/tvRouteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/active_route"
        android:textColor="@android:color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="75dp"
        app:cardElevation="40dp">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:backgroundTint="@android:color/transparent"
            android:elevation="40dp">

            <TextView
                android:id="@+id/tvTimeRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/time_remaining"
                android:textColor="#918C8C"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvCountTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTimeRemaining"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/count_time"
                android:textColor="#918C8C"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHrMnSc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCountTime"
                android:layout_centerHorizontal="true"
                android:text=" Hrs    mins    secs "
                android:textColor="#918C8C" />

            <Button
                android:id="@+id/btnPlus5Minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHrMnSc"
                android:layout_centerHorizontal="true"
                android:background="@drawable/five_minute_background_button"
                android:elevation="-10dp"
                android:text="@string/five_min_plus"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="40dp"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="198dp"
        android:minHeight="198dp"
        android:progress="100"
        android:progressDrawable="@drawable/progress_bar_circular" />

    <ImageView
        android:id="@+id/ivChildImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRouteName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baby" />

    <TextView
        android:id="@+id/tvChildName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivChildImage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@android:color/white" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="120dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/line4"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            app:buttonGravity="center_vertical|top"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:minWidth="150dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="13dp"
                    android:background="@android:color/transparent"
                    android:gravity="end|center_vertical"
                    android:minWidth="150dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />


            </RelativeLayout>


        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:layout_anchor="@id/line4" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>



